Add new palette

--- a/config/palette_colors.ini
+++ b/config/palette_colors.ini
@@ -398,3 +398,29 @@ third = Изумруд
 fourth = Охра
 fifth = Бежевый
 
+[81]
+first = Св. слив
+second = Черный
+third = Т. серый
+fourth = Туман
+fifth = Сирень
+sixth = Серо-голуб.
+seventh = Нефрит
+eighth = Св. серый
+ninth = Серый
+tenth = Серо-синий
+
+[114]
+first = Св. серый
+second = Т. корич.
+third = Бирюза
+fourth = Охра
+fifth = Серый
+
+[110]
+first = Св. лен
+second = Т. серый
+third = Серо-синий
+fourth = Нефрит
+fifth = Серо-голуб.
+
