user can add palette by yourself

--- a/config/palette_colors.ini
+++ b/config/palette_colors.ini
@@ -424,3 +424,10 @@ third = Серо-синий
 fourth = Нефрит
 fifth = Серо-голуб.
 
+[77]
+first = Шампань
+second = Табак
+third = Перламутр
+fourth = Ментол
+fifth = Карамель
+
